gcc/testsuite/rust/rustc/ui/parser/doc-before-semi.rs
fn main() {
    /// hi
// { dg-error ".E0585." "" { target *-*-* } .-1 }
// { help ".E0585." "" { target *-*-* } .-2 }
    ;
}

